0120学習内容（nav要素内の実装）

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link href="./css/reset.css" rel="stylesheet">
+  <link href="./css/base.css" rel="stylesheet">
+  <link href="./css/style.css" rel="stylesheet">
+  <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 </head>
 
 <body>
@@ -15,6 +19,23 @@
   consequat. Duis
   aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
   sint -->
+  <header>
+    <nav class="inner nav_container">
+      <div class="fas fa-archway fa-3x nav_archway"></div>
+      <button class="btn_contact" type="button">contact</button>
+    </nav>
+  </header>
+    <main>
+    <section class="keyvisual"></section><!-- メインタイトル、サブタイトル、背景画
+   像がある部分 -->
+    <section class="work"></section><!-- 「WORK」のタイトルがある部分 -->
+    <section class="skills"></section><!-- 「WE ARE SKILLS」のタイトルがある部分
+   -->
+    <section class="plan"></section><!-- 「SELECT PLAN」のタイトルがある部分 -->
+    <nav class="sns"></nav><!-- iconが並んでいる部分 -->
+    </main>
+    <footer></footer>
+   
 </body>
 
 </html>
