0127学習内容（keyvisual配置）

--- a/index.html
+++ b/index.html
@@ -26,8 +26,14 @@
     </nav>
   </header>
     <main>
-    <section class="keyvisual"></section><!-- メインタイトル、サブタイトル、背景画
-   像がある部分 -->
+    <section class="keyvisual">
+      <div class="inner keyvisual_Img">
+        <div class="keyvisual_Textbox">
+          <h1 class="keyvisual_title">WEB PRODUCTION COMPANY</h1>
+          <p class="keyvisual_subtitle">DIRECTION,CONTENT MARKETING</p>
+        </div>
+      </div>
+    </section><!-- メインタイトル、サブタイトル、背景画像がある部分 -->
     <section class="work"></section><!-- 「WORK」のタイトルがある部分 -->
     <section class="skills"></section><!-- 「WE ARE SKILLS」のタイトルがある部分
    -->
