20220413学習内容（LP作成keyvisual,workの実装）

--- a/index.html
+++ b/index.html
@@ -26,15 +26,29 @@
     </nav>
   </header>
     <main>
-    <section class="keyvisual">
-      <div class="inner keyvisual_Img">
+    <section class="inner keyvisual">
+      <!-- メインタイトル、サブタイトル、背景画像がある部分 -->
+      <div class="keyvisual_Img">
         <div class="keyvisual_Textbox">
           <h1 class="keyvisual_title">WEB PRODUCTION COMPANY</h1>
           <p class="keyvisual_subtitle">DIRECTION,CONTENT MARKETING</p>
         </div>
       </div>
-    </section><!-- メインタイトル、サブタイトル、背景画像がある部分 -->
-    <section class="work"></section><!-- 「WORK」のタイトルがある部分 -->
+    </section>
+    <section class="inner work">
+      <div class="work_pc"></div>
+      <div class="work_Textbox">
+        <h1 class="work_title">WORK</h1>
+        <p class="work_text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+  dolore magna
+  aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  consequat. Duis
+  aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+  sint
+        </p>
+      </div>
+    </section><!-- 「WORK」のタイトルがある部分 -->
     <section class="skills"></section><!-- 「WE ARE SKILLS」のタイトルがある部分
    -->
     <section class="plan"></section><!-- 「SELECT PLAN」のタイトルがある部分 -->
