20220416学習内容（skillsの実装）

--- a/index.html
+++ b/index.html
@@ -49,7 +49,19 @@
         </p>
       </div>
     </section><!-- 「WORK」のタイトルがある部分 -->
-    <section class="skills"></section><!-- 「WE ARE SKILLS」のタイトルがある部分
+    <section class="inner skills">
+      <div class="skills_Textbox">
+        <h1 class="skills_title">WE ARE SKILLS</h1>
+      </div>
+      <div class="skills_itembox">
+        <div class="skills_item01"></div>
+        <div class="skills_item02"></div>
+        <div class="skills_item03"></div>
+        <div class="skills_item04"></div>
+        <div class="skills_item05"></div>
+        <div class="skills_item06"></div>
+      </div>
+    </section><!-- 「WE ARE SKILLS」のタイトルがある部分
    -->
     <section class="plan"></section><!-- 「SELECT PLAN」のタイトルがある部分 -->
     <nav class="sns"></nav><!-- iconが並んでいる部分 -->
