20220417学習内容（PLANのテーブル実装）

--- a/index.html
+++ b/index.html
@@ -61,9 +61,54 @@
         <div class="skills_item05"></div>
         <div class="skills_item06"></div>
       </div>
-    </section><!-- 「WE ARE SKILLS」のタイトルがある部分
-   -->
-    <section class="plan"></section><!-- 「SELECT PLAN」のタイトルがある部分 -->
+    </section><!-- 「WE ARE SKILLS」のタイトルがある部分   -->
+    <section class="inner plan">
+      <div class="plan_Textbox">
+        <h1 class="plan_title">SELECT PLAN</h1>
+      </div>
+      <table class="plan_table">
+        <thead>
+          <tr>
+            <th>PLAN</th>
+            <th>BASIC PLAN</th>
+            <th>STANDARD PLAN</th>
+            <th>ENTERPRISE PLAN</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>PRICE</td>
+            <td>&yen;100,000</td>
+            <td>&yen;200,000</td>
+            <td>&yen;300,000</td>
+          </tr>
+          <tr>
+            <td>DELIVERY</td>
+            <td>MANUSCRIPT</td>
+            <td>HTML</td>
+            <td>MANUSCRIPT,HTML,PSD</td>
+          </tr>
+          <tr>
+            <td>ANALYSIS</td>
+            <td>&bigcirc;</td>
+            <td>&bigcirc;</td>
+            <td>&bigcirc;</td>
+          </tr>
+          <tr>
+            <td>IMPROVEMENT</td>
+            <td>&chi;</td>
+            <td>&bigcirc;</td>
+            <td>&bigcirc;</td>
+          </tr>
+          <tr>
+            <td>C</td>
+            <td>&chi;</td>
+            <td>&chi;</td>
+            <td>&bigcirc;</td>
+          </tr>
+        </tbody>
+      </table>
+    </section><!-- 「SELECT PLAN」のタイトルがある部分 -->
     <nav class="sns"></nav><!-- iconが並んでいる部分 -->
     </main>
     <footer></footer>
