--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <header>
     <nav class="inner nav_container">
       <div class="fas fa-archway fa-3x nav_archway"></div>
-      <button class="btn_contact" type="button">contact</button>
+      <button class="btn_contact" type="button"><a href="#">contact</a></button>
     </nav>
   </header>
     <main>
@@ -109,7 +109,14 @@
         </tbody>
       </table>
     </section><!-- 「SELECT PLAN」のタイトルがある部分 -->
-    <nav class="sns"></nav><!-- iconが並んでいる部分 -->
+    <nav class="inner sns">
+      <ul class="sns_link">
+        <li><a class="fab fa-facebook-f" href="#"></a></li>
+        <li><a class="fab fa-dribbble" href="#"></a></li>
+        <li><a class="fab fa-twitter" href="#"></a></li>
+        <li><a class="fas fa-envelope" href="#"></a></li>
+      </ul>
+    </nav><!-- iconが並んでいる部分 -->
     </main>
     <footer></footer>
    
