2022学習内容（footerの実装、skillsのタグをaタグに変更、hoverの追加）

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     </nav>
   </header>
     <main>
-    <section class="inner keyvisual">
-      <!-- メインタイトル、サブタイトル、背景画像がある部分 -->
+    <section class="inner keyvisual"><!-- メインタイトル、サブタイトル、背景画像がある部分 -->
       <div class="keyvisual_Img">
         <div class="keyvisual_Textbox">
           <h1 class="keyvisual_title">WEB PRODUCTION COMPANY</h1>
@@ -35,7 +34,7 @@
         </div>
       </div>
     </section>
-    <section class="inner work">
+    <section class="inner work"><!-- 「WORK」のタイトルがある部分 -->
       <div class="work_pc"></div>
       <div class="work_Textbox">
         <h1 class="work_title">WORK</h1>
@@ -48,21 +47,21 @@
   sint
         </p>
       </div>
-    </section><!-- 「WORK」のタイトルがある部分 -->
-    <section class="inner skills">
+    </section>
+    <section class="inner skills"><!-- 「WE ARE SKILLS」のタイトルがある部分   -->
       <div class="skills_Textbox">
         <h1 class="skills_title">WE ARE SKILLS</h1>
       </div>
       <div class="skills_itembox">
-        <div class="skills_item01"></div>
-        <div class="skills_item02"></div>
-        <div class="skills_item03"></div>
-        <div class="skills_item04"></div>
-        <div class="skills_item05"></div>
-        <div class="skills_item06"></div>
+        <a class="skills_item01 hover_skills" href="#"></a>
+        <a class="skills_item02 hover_skills" href="#"></a>
+        <a class="skills_item03 hover_skills" href="#"></a>
+        <a class="skills_item04 hover_skills" href="#"></a>
+        <a class="skills_item05 hover_skills" href="#"></a>
+        <a class="skills_item06 hover_skills" href="#"></a>
       </div>
-    </section><!-- 「WE ARE SKILLS」のタイトルがある部分   -->
-    <section class="inner plan">
+    </section>
+    <section class="inner plan"><!-- 「SELECT PLAN」のタイトルがある部分 -->
       <div class="plan_Textbox">
         <h1 class="plan_title">SELECT PLAN</h1>
       </div>
@@ -101,25 +100,25 @@
             <td>&bigcirc;</td>
           </tr>
           <tr>
-            <td>C</td>
+            <td>ABCDEFG</td>
             <td>&chi;</td>
             <td>&chi;</td>
             <td>&bigcirc;</td>
           </tr>
         </tbody>
       </table>
-    </section><!-- 「SELECT PLAN」のタイトルがある部分 -->
-    <nav class="inner sns">
+    </section>
+    <nav class="inner sns"><!-- iconが並んでいる部分 -->
       <ul class="sns_link">
-        <li><a class="fab fa-facebook-f" href="#"></a></li>
-        <li><a class="fab fa-dribbble" href="#"></a></li>
-        <li><a class="fab fa-twitter" href="#"></a></li>
-        <li><a class="fas fa-envelope" href="#"></a></li>
+        <li><a class="fab fa-facebook-f hover_sns" href="#"></a></li>
+        <li><a class="fab fa-dribbble hover_sns" href="#"></a></li>
+        <li><a class="fab fa-twitter hover_sns" href="#"></a></li>
+        <li><a class="fas fa-envelope hover_sns" href="#"></a></li>
       </ul>
-    </nav><!-- iconが並んでいる部分 -->
+    </nav>
     </main>
-    <footer></footer>
-   
+    <footer class="inner footer">
+      <div class="footer_text">ABCDEFG</div>
+    </footer>
 </body>
-
 </html>
